# FastAPI-template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  example.toml  pyproject.toml
app/: __init__.py  __main__.py  application.py  settings.py
app/api/: router.py
app/api/echo/: __init__.py  views.py
app/api/monitoring/: __init__.py
app/db/: __init__.py  user.py
app/events/: __init__.py  shutdown.py
app/middlewares/: __init__.py  main.py
app/web/: application.py
app/web/api/: __init__.py  router.py
app/web/api/echo/: __init__.py  views.py
app/web/api/monitoring/: __init__.py
app/web/events/: __init__.py  shutdown.py  startup.py
app/web/middlewares/: __init__.py  main.py
deploy/: Dockerfile  docker-compose.yml
