[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["yeezy-na-izi <howone1sky@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
toml = "^0.10.2"
tortoise-orm = "^0.19.2"
aerich = "^0.7.1"
flake8 = "^5.0.4"
black = "^22.10.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
